--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     h1 {
       font-size: 3em;
       margin-bottom: 10px;
+      word-wrap: break-word;
     }
     p {
       font-size: 1.2em;
@@ -27,4 +28,12 @@
   </style>
 </head>
 <body>
-  <h1>🎉 Welcome to My Fr
+  <h1>🎉 Welcome to My Free Website 🚀</h1>
+  <p>Yeh website GitHub Pages pe free mein chal rahi hai 💯</p>
+  <p>Bhai ka project finally LIVE ho gaya 😎</p>
+
+  <footer>
+    <p>© 2025 Bhai ki Website | Made with ❤️ and free hosting</p>
+  </footer>
+</body>
+</html>
