--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 </head>
 <body>
   <h1>🎉 Welcome to My Free Website 🚀</h1>
-  <p>Yeh website GitHub Pages pe free mein chal rahi hai 💯</p>
-  <p>Bhai ka project finally LIVE ho gaya 😎</p>
+  <p>Welcome to Vertex Retail Group official site 🛍️</p>
+<p>We provide quality products at the best prices.</p>
+
 
   <footer>
     <p>© 2025 Bhai ki Website | Made with ❤️ and free hosting</p>
   </footer>
 </body>
 </html>
+
