--- a/index.html
+++ b/index.html
@@ -242,12 +242,8 @@
   </main>
 
   <footer>
-    © 2025 Vertex Retail Group | Built with ❤️ | Free hosting
-  </footer>
+  <p>© 2025 Vertex Retail Group LLC | All Rights Reserved</p>
+  <p>7901 4th St N #24751, St. Petersburg, FL 33702</p>
+  <p>📞 +1 786-429-9302</p>
+</footer>
 
-  <!-- small inline JS only for smooth scroll / demo actions (optional) -->
-  <script>
-    // no extra code needed; buttons are placeholders — later we'll add payment links.
-  </script>
-</body>
-</html>
