--- a/index.html
+++ b/index.html
@@ -1,214 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vertex Retail Group LLC</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Vertex Retail Group LLC — Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Poppins', sans-serif; background: #f4f5f7; }
-
-    header {
-      background: #0b4da2;
-      color: white;
-      padding: 15px 40px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    :root{
+      --accent:#0b66d1; --bg:#f6f8fb; --card:#fff; --muted:#6b7280; --radius:12px; --maxw:1200px;
     }
-    header h1 { font-size: 1.4rem; }
-    header nav a {
-      color: white;
-      margin-left: 20px;
-      text-decoration: none;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-    header nav a:hover { text-decoration: underline; }
-
-    .slider {
-      position: relative;
-      overflow: hidden;
-      height: 280px;
-    }
-    .slides {
-      display: flex;
-      width: 400%;
-      animation: slide 12s infinite;
-    }
-    .slides img {
-      width: 100%;
-      object-fit: cover;
-      height: 280px;
-    }
-    @keyframes slide {
-      0%, 20% { transform: translateX(0); }
-      25%, 45% { transform: translateX(-100%); }
-      50%, 70% { transform: translateX(-200%); }
-      75%, 100% { transform: translateX(-300%); }
-    }
-
-    .brands {
-      background: white;
-      overflow: hidden;
-      white-space: nowrap;
-      padding: 10px 0;
-      animation: scrollBrands 25s linear infinite;
-    }
-    .brands img {
-      height: 40px;
-      margin: 0 25px;
-      vertical-align: middle;
-    }
-    @keyframes scrollBrands {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
-    }
-
-    .category-buttons {
-      text-align: center;
-      margin: 25px 0;
-    }
-    .category-buttons button {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 25px;
-      padding: 10px 20px;
-      margin: 5px;
-      cursor: pointer;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-    .category-buttons button:hover, .category-buttons .active {
-      background: #0b4da2;
-      color: #fff;
-    }
-
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 25px;
-      padding: 20px 40px;
-    }
-
-    .product {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      text-align: center;
-      padding: 15px;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .product:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
-    .product img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-    .product h3 { margin: 10px 0 5px; }
-    .product p { color: #666; font-size: 0.9em; }
-    .price { font-weight: 600; margin: 10px 0; color: #0b4da2; }
-    .btn {
-      display: inline-block;
-      padding: 8px 15px;
-      background: #0b4da2;
-      color: #fff;
-      border-radius: 5px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-    .btn:hover { background: #083a7a; }
-
-    footer {
-      background: #0b4da2;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 50px;
-    }
+    *{box-sizing:border-box}
+    body{font-family:'Poppins',sans-serif;margin:0;background:var(--bg);color:#0b1720;-webkit-font-smoothing:antialiased}
+    /* NAV */
+    .nav{background:linear-gradient(90deg,#0b4da2,#0d63a6);color:#fff;padding:12px 18px;position:sticky;top:0;z-index:1000}
+    .nav .wrap{max-width:var(--maxw);margin:0 auto;display:flex;align-items:center;justify-content:space-between}
+    .brand{display:flex;gap:12px;align-items:center}
+    .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,#00c6ff,#007bff);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700}
+    nav a{color:#fff;text-decoration:none;margin-left:16px;font-weight:600}
+    /* HERO/SLIDER */
+    .hero-wrap{max-width:var(--maxw);margin:18px auto;padding:0 16px}
+    .hero{position:relative;height:420px;border-radius:14px;overflow:hidden;background:#222}
+    .hero .slide{position:absolute;inset:0;opacity:0;transform:translateX(6px);transition:all .7s}
+    .hero .slide.show{opacity:1;transform:translateX(0)}
+    .hero .slide .overlay{position:absolute;inset:0;background:linear-gradient(180deg, rgba(2,6,24,0.16), rgba(2,6,24,0.26))}
+    .hero .content{position:relative;z-index:2;color:#fff;text-align:center;padding:36px}
+    .hero h1{font-size:clamp(24px,4vw,44px);margin-bottom:8px}
+    .hero p{opacity:.95}
+    .dots{position:absolute;left:50%;transform:translateX(-50%);bottom:18px;display:flex;gap:8px;z-index:3}
+    .dot{width:10px;height:10px;border-radius:999px;background:rgba(255,255,255,0.35);cursor:pointer}
+    .dot.active{background:#fff}
+    /* BRANDS */
+    .brands-wrap{background:#fff;margin-top:16px;padding:12px 0;box-shadow:0 6px 20px rgba(2,6,23,0.04)}
+    .brand-track{display:flex;gap:28px;align-items:center;padding-left:6%;animation:scroll 24s linear infinite}
+    .brand-track img{height:44px;display:block}
+    @keyframes scroll{0%{transform:translateX(0)}100%{transform:translateX(-50%)}}
+    /* CATEGORIES */
+    .cats{max-width:var(--maxw);margin:18px auto;padding:0 16px;display:flex;gap:12px;flex-wrap:wrap;justify-content:center}
+    .cat-btn{background:#fff;border-radius:999px;padding:8px 14px;box-shadow:0 6px 18px rgba(11,23,34,0.04);cursor:pointer;font-weight:700}
+    .cat-btn.active{background:linear-gradient(90deg,#e6f3ff,#dfeeff);color:var(--accent)}
+    /* PRODUCTS */
+    .container{max-width:var(--maxw);margin:20px auto;padding:0 16px}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px}
+    .card{background:var(--card);border-radius:12px;padding:12px;box-shadow:0 6px 20px rgba(12,20,30,0.06);display:flex;flex-direction:column;transition:transform .25s,box-shadow .25s}
+    .card:hover{transform:translateY(-8px);box-shadow:0 22px 48px rgba(12,20,30,0.12)}
+    .thumb{height:170px;border-radius:8px;overflow:hidden;background:#f3f6f9;display:flex;align-items:center;justify-content:center}
+    .thumb img{width:100%;height:100%;object-fit:cover;display:block}
+    h3{margin:10px 0 6px;font-size:1.05rem}
+    .desc{color:var(--muted);font-size:.95rem;margin-bottom:8px}
+    .price{color:var(--accent);font-weight:700;margin-top:auto}
+    .actions{display:flex;gap:8px;margin-top:10px}
+    .btn{padding:8px 12px;border-radius:8px;background:var(--accent);color:#fff;text-decoration:none;font-weight:700}
+    .btn.secondary{background:#f3f6f9;color:var(--muted);border:1px solid #eef2f8}
+    footer{background:#072a66;color:#dfe9ff;padding:22px 16px;text-align:center;margin-top:30px}
+    /* RESPONSIVE */
+    @media (max-width:720px){ .hero{height:280px} .thumb{height:140px} .brand-track{padding-left:10px} .nav .wrap{padding:0 8px} }
   </style>
 </head>
 <body>
-
-  <header>
-    <h1>🛒 Vertex Retail Group LLC</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Shop</a>
-      <a href="#">Contact</a>
-    </nav>
+  <header class="nav">
+    <div class="wrap">
+      <div class="brand"><div class="logo">VR</div><div style="line-height:1"><div style="font-weight:700">Vertex Retail Group LLC</div><div style="font-size:12px;color:rgba(255,255,255,0.9)">Quality store</div></div></div>
+      <nav><a href="index.html">Home</a><a href="products.html">Products</a><a href="contact.html">Contact</a></nav>
+    </div>
   </header>
 
-  <section class="slider">
-    <div class="slides">
-      <img src="https://images.unsplash.com/photo-1582407947304-fd86f028f716" alt="Groceries" />
-      <img src="https://images.unsplash.com/photo-1598133894008-73a85d66a9b0" alt="Pet Supplies" />
-      <img src="https://images.unsplash.com/photo-1600185365483-26d7a4cc7519" alt="Supplements" />
-      <img src="https://images.unsplash.com/photo-1500839941678-aae14dbfae1e" alt="Beauty" />
-    </div>
-  </section>
+  <!-- HERO (category-based slides) -->
+  <div class="hero-wrap">
+    <div class="hero" id="hero">
+      <div class="slide" data-cat="groceries" style="background-image:url('https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&q=60&w=1600&fit=crop');background-size:cover">
+        <div class="overlay"></div>
+        <div class="content"><h1>Groceries</h1><p>Fresh items, pantry essentials & daily staples</p></div>
+      </div>
 
-  <div class="brands">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Nestle_textlogo_blue.svg/2560px-Nestle_textlogo_blue.svg.png" alt="Nestle">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Pedigree_logo.png" alt="Pedigree">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/GNC_logo.svg" alt="GNC">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/L%27Oreal_logo.svg" alt="L'Oreal">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Dove_logo.svg" alt="Dove">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/Royal_Canin_logo.svg" alt="Royal Canin">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Olay_logo.svg" alt="Olay">
+      <div class="slide" data-cat="pets" style="background-image:url('https://images.unsplash.com/photo-1546182990-dffeafbe841d?auto=format&q=60&w=1600&fit=crop');background-size:cover">
+        <div class="overlay"></div>
+        <div class="content"><h1>Pet Supplies</h1><p>Food, toys & accessories for your pets</p></div>
+      </div>
+
+      <div class="slide" data-cat="supplements" style="background-image:url('https://images.unsplash.com/photo-1587825140708-2f8a9dcd2f47?auto=format&q=60&w=1600&fit=crop');background-size:cover">
+        <div class="overlay"></div>
+        <div class="content"><h1>Supplements</h1><p>Vitamins, protein & health essentials</p></div>
+      </div>
+
+      <div class="slide" data-cat="beauty" style="background-image:url('https://images.unsplash.com/photo-1500839941678-aae14dbfae1e?auto=format&q=60&w=1600&fit=crop');background-size:cover">
+        <div class="overlay"></div>
+        <div class="content"><h1>Beauty</h1><p>Skincare, haircare & cosmetics</p></div>
+      </div>
+
+      <div class="dots" id="dots"></div>
+    </div>
   </div>
 
-  <div class="category-buttons">
-    <button class="active">Groceries 🥫</button>
-    <button>Pet Supplies 🐾</button>
-    <button>Supplements 💊</button>
-    <button>Beauty 💅</button>
+  <!-- BRANDS (continuous) -->
+  <div class="brands-wrap">
+    <div class="brand-track" id="brandTrack">
+      <!-- using safe placeholder logos so images show reliably; replace with your own later if needed -->
+      <img src="https://via.placeholder.com/140x44?text=Nestle" alt="Nestle">
+      <img src="https://via.placeholder.com/140x44?text=Pedigree" alt="Pedigree">
+      <img src="https://via.placeholder.com/140x44?text=GNC" alt="GNC">
+      <img src="https://via.placeholder.com/140x44?text=L%27Oreal" alt="L'Oreal">
+      <img src="https://via.placeholder.com/140x44?text=Dove" alt="Dove">
+      <img src="https://via.placeholder.com/140x44?text=Royal+Canin" alt="Royal Canin">
+      <img src="https://via.placeholder.com/140x44?text=Olay" alt="Olay">
+      <!-- duplicate set (JS duplicates too) -->
+    </div>
   </div>
 
-  <section class="products">
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1585238342028-4cbc1f3b8f98" alt="Organic Honey" />
-      <h3>Organic Honey</h3>
-      <p>Raw natural honey 500g</p>
-      <div class="price">$8.99</div>
-      <a href="#" class="btn">Buy Now</a>
-    </div>
+  <!-- CATEGORIES quick buttons -->
+  <div class="cats" id="cats">
+    <div class="cat-btn active" data-cat="groceries">Groceries 🥫</div>
+    <div class="cat-btn" data-cat="pets">Pet Supplies 🐾</div>
+    <div class="cat-btn" data-cat="supplements">Supplements 💊</div>
+    <div class="cat-btn" data-cat="beauty">Beauty 💄</div>
+  </div>
 
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1565958011705-44e211f7fae2" alt="Olive Oil" />
-      <h3>Olive Oil</h3>
-      <p>Extra virgin 1L</p>
-      <div class="price">$12.49</div>
-      <a href="#" class="btn">Buy Now</a>
-    </div>
+  <!-- PRODUCTS (summary view for home; full list in products.html) -->
+  <div class="container">
+    <h2 style="text-align:center;margin-bottom:12px">Featured — click View for details</h2>
+    <div class="grid" id="homeGrid">
+      <!-- 4 sample featured cards; more on products page -->
+      <div class="card" data-cat="groceries"><div class="thumb"><img src="https://via.placeholder.com/600x400?text=Organic+Honey" alt="Organic Honey"></div><h3>Organic Honey</h3><p class="desc">Raw organic honey, 500g</p><div class="price">$8.99</div><div class="actions"><a href="products.html?open=Organic+Honey" class="btn">View</a><a href="#" class="btn secondary">Buy Now</a></div></div>
 
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1587731023874-1b2518f86f8c" alt="Cereal Pack" />
-      <h3>Cereal Pack</h3>
-      <p>Healthy breakfast pack</p>
-      <div class="price">$6.99</div>
-      <a href="#" class="btn">Buy Now</a>
-    </div>
+      <div class="card" data-cat="groceries"><div class="thumb"><img src="https://via.placeholder.com/600x400?text=Olive+Oil" alt="Olive Oil"></div><h3>Olive Oil</h3><p class="desc">Extra virgin olive oil 1L</p><div class="price">$12.50</div><div class="actions"><a href="products.html?open=Olive+Oil" class="btn">View</a><a href="#" class="btn secondary">Buy Now</a></div></div>
 
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1606813902779-d26632c84b1a" alt="Pasta Pack" />
-      <h3>Pasta Pack</h3>
-      <p>Premium Italian pasta 1kg</p>
-      <div class="price">$5.99</div>
-      <a href="#" class="btn">Buy Now</a>
+      <div class="card" data-cat="pets"><div class="thumb"><img src="https://via.placeholder.com/600x400?text=Dog+Food" alt="Dog Food"></div><h3>Dog Food</h3><p class="desc">Balanced nutrition for adult dogs</p><div class="price">$14.99</div><div class="actions"><a href="products.html?open=Dog+Food" class="btn">View</a><a href="#" class="btn secondary">Buy Now</a></div></div>
+
+      <div class="card" data-cat="beauty"><div class="thumb"><img src="https://via.placeholder.com/600x400?text=Face+Cream" alt="Face Cream"></div><h3>Face Cream</h3><p class="desc">Hydrating skincare</p><div class="price">$11.99</div><div class="actions"><a href="products.html?open=Face+Cream" class="btn">View</a><a href="#" class="btn secondary">Buy Now</a></div></div>
     </div>
-  </section>
+  </div>
 
   <footer>
-    Vertex Retail Group LLC<br>
-    7901 4th St N #24751, St. Petersburg, FL 33702<br>
-    📞 +1 786-429-9302
+    <p>Vertex Retail Group LLC</p>
+    <p>7901 4th St N #24751, St. Petersburg, FL 33702</p>
+    <p>📞 +1 786-429-9302</p>
   </footer>
 
+  <script>
+    // HERO slider (fade + auto) with dots + category mapping
+    (function(){
+      const slides = Array.from(document.querySelectorAll('.hero .slide'));
+      const dotsWrap = document.getElementById('dots');
+      let index = 0, timer;
+      slides.forEach((s,i)=>{
+        const d = document.createElement('div'); d.className='dot'; d.addEventListener('click', ()=> goto(i));
+        dotsWrap.appendChild(d);
+      });
+      const dots = Array.from(dotsWrap.children);
+      function show(i){
+        slides.forEach((s,ii)=> s.classList.toggle('show', ii===i));
+        dots.forEach((d,ii)=> d.classList.toggle('active', ii===i));
+      }
+      function goto(i){
+        index = (i + slides.length) % slides.length;
+        show(index);
+        clearInterval(timer);
+        timer = setInterval(()=> goto(index+1), 3500);
+      }
+      goto(0);
+      timer = setInterval(()=> goto(index+1), 3500);
+    })();
+
+    // Brand track duplication for continuous scroll
+    (function(){
+      const track = document.getElementById('brandTrack');
+      track.innerHTML = track.innerHTML + track.innerHTML; // duplicate for smooth scroll
+    })();
+
+    // Category quick buttons - scroll to products and highlight
+    (function(){
+      const btns = document.querySelectorAll('.cat-btn');
+      const homeGrid = document.getElementById('homeGrid');
+      btns.forEach(b=>{
+        b.addEventListener('click', ()=>{
+          btns.forEach(x=>x.classList.remove('active')); b.classList.add('active');
+          const cat = b.dataset.cat;
+          // show only featured cards from that cat on home featured grid
+          Array.from(homeGrid.children).forEach(card=>{
+            card.style.display = (cat === card.dataset.cat) ? '' : 'none';
+          });
+          // scroll to products
+          homeGrid.scrollIntoView({behavior:'smooth', block:'start'});
+        });
+      });
+    })();
+  </script>
 </body>
 </html>
